--- a/SimpleFileBackup/SimpleFileBackup.csproj
+++ b/SimpleFileBackup/SimpleFileBackup.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackupDataArgs.cs" />
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
     </Compile>
