--- a/SimpleFileBackup.Windows/App.config
+++ b/SimpleFileBackup.Windows/App.config
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SimpleFileBackup.Windows.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <userSettings>
+        <SimpleFileBackup.Windows.Properties.Settings>
+            <setting name="BackupMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BackupName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AddDate" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Overwrite" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </SimpleFileBackup.Windows.Properties.Settings>
+    </userSettings>
 </configuration>
